# vort-ecs

./: .clang-format  CMakeLists.txt  README.md  ecs.hpp  main.cpp
src/: archtype.cpp  archtype.hpp  array_hashmap.hpp  command.hpp  component_storage.cpp  component_storage.hpp  ecs.hpp  entities.cpp  entities.hpp  erased_component.cpp  erased_component.hpp  globals.hpp  javascript_bindings.hpp  main.cpp  query.hpp  registry.cpp
